<?xml version="1.0"?>
<package format="3">
  <name>dragon</name>
  <version>1.3.6</version>
  <description>The dragon package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/JSKAerialRobot/aerial_robot</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hydrus</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_msgs</exec_depend>
  <exec_depend>aerial_robot_estimation</exec_depend>
  <exec_depend>aerial_robot_simulation</exec_depend>
  <exec_depend>aerial_robot_base</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>hydrus</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugins.xml"/>
    <aerial_robot_control plugin="${prefix}/plugins/flight_control_plugins.xml"/>
    <aerial_robot_control plugin="${prefix}/plugins/flight_navigation_plugin.xml" />
    <aerial_robot_estimation plugin="${prefix}/plugins/sensor_plugins.xml"/>
  </export>

</package>
