<?xml version="1.0"?>
<package format="3">
  <name>hydrus_xi</name>
  <version>1.3.6</version>
  <description>The hydrus_xi package</description>

  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>hydrus</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend>osqp_vendor</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>hydrus</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>osqp_vendor</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>aerial_robot_base</exec_depend>
  <exec_depend>aerial_robot_control</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>aerial_robot_simulation</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugin.xml"/>
    <aerial_robot_control plugin="${prefix}/plugins/flight_control_plugins.xml"/>
    <aerial_robot_control plugin="${prefix}/flight_navigation_plugin.xml" />
  </export>

</package>
